--- a/lab3-C32838/pom.xml
+++ b/lab3-C32838/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cr.ac.ucr.paraiso.progra2.c32838.lab3</groupId>
-    <artifactId>la3-C32838</artifactId>
+    <artifactId>lab3-C32838</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
